# GGJ2K25

./: Cargo.toml
assets/shaders/: cachet_material.wgsl
src/: cachet_material.rs  constants.rs  lib.rs
src/game_hud/: game_hud_plugin.rs  mod.rs
src/main_menu/: main_menu_plugin.rs  mod.rs
src/my_audio/: mod.rs  my_audio_plugin.rs
src/on_hit/: mod.rs  on_hit_plugin.rs
